--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -256,13 +256,14 @@ jobs:
         retention-days: 1        
 
   merge-ota:
-    needs: build  # 等待所有构建任务完成
+    needs: build
     if: github.event.inputs.version == 'release'
     runs-on: ubuntu-latest
     steps:
       - name: Install jq
         run: sudo apt-get install -y jq
 
+      # 下载所有设备的 OTA 信息
       - name: Download all OTA files
         uses: actions/download-artifact@v4
         with:
@@ -270,46 +271,65 @@ jobs:
           pattern: ota-*
           merge-multiple: true
 
+      # 合并 OTA 信息
       - name: Merge OTA Info
         run: |
           mkdir -p merged
           
-          # 创建初始 JSON 结构
-          echo "{}" > merged/ota.json
+          # 创建基础结构
+          cat > merged/ota.json << 'EOF'
+          {
+            "netgear,r8500": [],
+            "friendlyarm,nanopi-r4s": [],
+            "friendlyarm,nanopi-r5c": [],
+            "friendlyarm,nanopi-r5s": [],
+            "x86_64": [],
+            "armsr,armv8": []
+          }
+          EOF
+          
+          # 显示下载的文件
+          echo "Downloaded files:"
+          ls -R ota_files/
           
           # 处理每个设备的 fw.json
           for file in ota_files/*/fw.json; do
             if [ -f "$file" ]; then
               echo "Processing: $file"
+              device_type=$(basename $(dirname "$file") | cut -d'-' -f2)
               
-              # 使用 jq 合并，保留数组内容
-              jq -s '
-                def merge:
-                  reduce .[] as $item (
-                    {},
-                    . * $item
-                  );
-                merge
-              ' merged/ota.json "$file" > merged/temp.json
+              # 根据设备类型映射到正确的键名
+              case "$device_type" in
+                "armv8")
+                  key="armsr,armv8"
+                  ;;
+                "nanopi-r4s")
+                  key="friendlyarm,nanopi-r4s"
+                  ;;
+                "nanopi-r5s")
+                  key="friendlyarm,nanopi-r5s"
+                  ;;
+                "netgear_r8500")
+                  key="netgear,r8500"
+                  ;;
+                "x86_64")
+                  key="x86_64"
+                  ;;
+              esac
               
+              # 读取文件内容并更新对应设备的数组
+              content=$(cat "$file")
+              jq --arg key "$key" --argjson content "$content" \
+                '.[$key] = $content' merged/ota.json > merged/temp.json
               mv merged/temp.json merged/ota.json
             fi
           done
           
-          # 确保所有设备都有数组
-          jq '
-            . * {
-              "netgear,r8500": (."netgear,r8500" // []),
-              "friendlyarm,nanopi-r4s": (."friendlyarm,nanopi-r4s" // []),
-              "friendlyarm,nanopi-r5c": (."friendlyarm,nanopi-r5c" // []),
-              "friendlyarm,nanopi-r5s": (."friendlyarm,nanopi-r5s" // []),
-              "x86_64": (."x86_64" // []),
-              "armsr,armv8": (."armsr,armv8" // [])
-            }
-          ' merged/ota.json > merged/temp.json
+          # 格式化最终的 JSON
+          jq -S . merged/ota.json > merged/temp.json && mv merged/temp.json merged/ota.json
           
-          # 格式化并排序
-          jq -S . merged/temp.json > merged/ota.json
+          echo "Final merged content:"
+          cat merged/ota.json
 
       - name: Deploy OTA to Gitea
         run: |
